--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "llm = Ollama(\n",
-    "    model=\"gemma:2b\",\n",
+    "    model=\"llama3:latest\",\n",
     "    temperature=0\n",
     ")"
    ]
